bin/test/fixtures/public/fail/semantic/extra/logic_op_not.jmm
class Logic {
    public static void main(String[] args) {
        int a;
        boolean b;
        b = !a;
    }
}